--- a/index.html
+++ b/index.html
@@ -6,12 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>donate-today/wahid</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Let’s Help Those Who Are
+    <section class="headline">
+    <h1>Let’s Help Those Who Are <br>
         More In Need</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset</p>
-    
+     <div class="donate-now"><p class="ptag-1">It’s easy to get so wrapped up in fixing your own life that you forget about helping others. And while it’s important to put yourself first sometimes, it’s even more important to help others whenever you can.</p>
+       <a href=""class="link-bottom">DONATE NOW</a></div>
+    </section>
+    <section class="donate-box">
+        <div class="no.two"><h1>Donate Today</h1></div>
+        <p class="small-text"> A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles</p></div>
+            <div class="donate-amount">
+                <div class="box donate-1">100tk</div>
+                <div class="box donate-2">200tk</div>
+                <div class="box donate-3">500tk</div>
+                <div class="box donate-4">1000tk</div>
+                <div class="box donate-5">5000tk</div>
+            </div>
+    </section>
+    <section class="other-amount">
+        <div>
+        <p class="other-amount">Other Amount (Taka)</p>
+        <a href=""class="link-bottom">DONATE NOW</a>
+        </div>
+    </section>
+     <section>
+        <div>
+        <h1>Our Donate Plan</h1>
+        <p class="ptag-2">It is possible to donate in the name of a third party, making a gift in honor or in memory of someone or something</p>
+        </div>
+    </section>
+    <section class="part-5">
+        <div class="hard-1">
+        <img src="icons/food.png">
+        <h2>Food for a family</h2>
+            <p class="fff">Food is usually of plant, animal, or fungal origin, and contains essential nutrients, such as carbohydrates, fats, proteins, vitamins, or minerals. The substance is ingested by an organism and assimilated by the organism's cells to provide energy, maintain life, or stimulate growth</p>
+        </div>
+        <div class="hard-2">
+            <img src="icons/shelter.png" alt="">
+            <h2>Shelter for a family</h2>
+            <p>Shelter helps people in housing need by providing advice and practical assistance, and campaigns for better investment in housing and for laws and policies to improve the lives of homeless and badly housed people</p>
+        </div>
+        <div class="hard-3">
+            <img src="icons/Frame-1.png" alt="">
+            <h2>Education for a child</h2>
+            <p>Education is a purposeful activity directed at achieving certain aims, such as transmitting knowledge or fostering skills and character traits</p>
+        </div>
+    </section>
 </body>
 </html>
