--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="headline">
-    <h1>Let’s Help Those Who Are <br>
+    <h1 class="dntpln">Let’s Help Those Who Are <br>
         More In Need</h1>
      <div class="donate-now"><p class="ptag-1">It’s easy to get so wrapped up in fixing your own life that you forget about helping others. And while it’s important to put yourself first sometimes, it’s even more important to help others whenever you can.</p>
        <a href=""class="link-bottom">DONATE NOW</a></div>
     </section>
     <section class="donate-box">
-        <div class="no.two"><h1>Donate Today</h1></div>
+        <div class="no.two"><h1 class="dntpln">Donate Today</h1></div>
         <p class="small-text"> A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles</p></div>
             <div class="donate-amount">
                 <div class="box donate-1">100tk</div>
@@ -36,8 +39,8 @@
     </section>
      <section>
         <div>
-        <h1>Our Donate Plan</h1>
-        <p class="ptag-2">It is possible to donate in the name of a third party, making a gift in honor or in memory of someone or something</p>
+        <h1 class="dntpln">Our Donate Plan</h1>
+        <p class="ptag-2">It is possible to donate in the name of a third party,<br> making a gift in honor or in memory of someone or something</p>
         </div>
     </section>
     <section class="part-5">
@@ -56,6 +59,50 @@
             <h2>Education for a child</h2>
             <p>Education is a purposeful activity directed at achieving certain aims, such as transmitting knowledge or fostering skills and character traits</p>
         </div>
+    </section>
+    <section class="part-6">
+        <div class="donation-depend">
+            <h2>Their lives depend on your donation</h2>
+            <p class="donation-im"><strong>A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles.<br><strong>A donation may satisfy medical needs such as blood or organs for transplant.</strong></p>
+            <a href=""class="htc">How to Contribute?</a></div>
+            <div class="side-img"><img src="images/donation0.jpg" alt=""></div>
+        </div>
+    </section>
+    <section class="part-7">
+        <div class="side-img2">
+            <img src="images/donation6.jpg" alt="">
+        </div>
+        <div class="donation-depend-2">
+            <h2>They need us<br>
+                to suvive</h2>
+            <p class="donation-im">Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <p class="donation-im">Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset.</p>
+                <a href=""class="htc">How to Contribute?</a>
+        </div>
+    </section>
+    <section class="text-finishing">
+        <div class="finishing"><h1><strong>Get My Updates</strong></h1></div>
+        <div class="finishing2"><p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
+            deterruisset. No duo populo animal noluisse, enim</p></div>
+        </div>
+    </section>
+    <section>
+        <div class="box">
+            <form action="#">
+                <div class="from-box">
+                    <input type="text" name="EmailAddress" placeholder="Email">
+                    <button type="submit">Subscribe</button>
+                </div>
+              </form>
+          </div>
+        </div>
+    </section>
+    <section class="last-one">
+        <div class="humble"><h3>Be Humble</h3></div>
+        <div class="humble2">I’m gonna do it</div>
     </section>
 </body>
 </html>
