denate-today-cmplt

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <section class="other-amount">
         <div>
         <p class="other-amount">Other Amount (Taka)</p>
+        <hr class="line">
         <a href=""class="link-bottom">DONATE NOW</a>
         </div>
     </section>
@@ -75,11 +76,8 @@
         <div class="donation-depend-2">
             <h2>They need us<br>
                 to suvive</h2>
-            <p class="donation-im">Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
-            <p class="donation-im">Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset.</p>
+            <p class="donation-im">Humility goes a whole lot further than bravado. It's not about convincing everyone how much you know. </p>
+            <p class="donation-im">It's about showing that you're a team player by being willing to listen, learn, and add value where you can. No one likes a spotlight searcher..</p>
                 <a href=""class="htc">How to Contribute?</a>
         </div>
     </section>
@@ -90,19 +88,19 @@
         </div>
     </section>
     <section>
-        <div class="box">
+        <div class="for-background">
             <form action="#">
-                <div class="from-box">
-                    <input type="text" name="EmailAddress" placeholder="Email">
-                    <button type="submit">Subscribe</button>
-                </div>
-              </form>
-          </div>
-        </div>
+                <div class="email-section">
+               <input type="text" name="" placeholder="Email">
+               <input class="Subscribe-buttom" type="submit" name="" value="Subscribe" >
+            </div>
+            </form>
     </section>
     <section class="last-one">
-        <div class="humble"><h3>Be Humble</h3></div>
-        <div class="humble2">I’m gonna do it</div>
+        <div class="humble"><h3>Be humble</h3></div>
+        <div class="humble2">Im gonna do it</div>
     </section>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
 </body>
 </html>
